# es-query-builder

./: .gitignore  .readthedocs.yaml  README.md  TEST_SUMMARY.md  pyproject.toml
.github/workflows/: create-tag.yml
docs/: conf.py
docs/source/: installation.rst
src/es_query_gen/: __init__.py  builder.py  connection.py  models.py  parser.py
src/es_query_gen/es_utils/: __init__.py  connection.py  schema_validator.py
src/es_utils/: __init__.py  schema_validatior.py
tests/: test_connection.py  test_integration.py  test_schema_validator.py
